--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,9 @@
 baseURL = "http://www.markedmondson.me/"
 languageCode = "en-us"
 title = "Mark Edmondson - Personal Blog"
-theme = "mediumish-gohugo-theme"
+theme = ["mediumish-gohugo-theme"]
 copyright = "Mark Edmondson - All rights reserved"
+publishDir = "docs"
 
 [params.author]
   name = "Mark Edmondson"
